--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -18,6 +18,8 @@ ERR_ESTIMATE=0
 
 #NTP server
 NTP_SERVER=time.izatcloud.net
+NTP_SERVER_2=asia.pool.ntp.org
+NTP_SERVER_3=0.cn.pool.ntp.org
 
 #XTRA CA path
 XTRA_CA_PATH=/system/etc/security/cacerts
@@ -28,14 +30,14 @@ XTRA_CA_PATH=/system/etc/security/cacerts
 DEBUG_LEVEL = 2
 
 # Intermediate position report, 1=enable, 0=disable
-INTERMEDIATE_POS=0
+INTERMEDIATE_POS=1
 
 # Below bit mask configures how GPS functionalities
 # should be locked when user turns off GPS on Settings
 # Set bit 0x1 if MO GPS functionalities are to be locked
 # Set bit 0x2 if NI GPS functionalities are to be locked
 # default - non is locked for backward compatibility
-GPS_LOCK = 3
+#GPS_LOCK = 0
 
 # supl version 2.0
 SUPL_VER=0x20000
@@ -53,7 +55,7 @@ USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=1
 #config.xml.
 #MSA=0X2
 #MSB=0X1
-SUPL_MODE=1
+SUPL_MODE=3
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
@@ -66,7 +68,7 @@ CAPABILITIES=0x37
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-ACCURACY_THRES=100
+ACCURACY_THRES=70
 
 ################################
 ##### AGPS server settings #####
@@ -206,3 +208,10 @@ MISSING_PULSE_TIME_DELTA = 900
 # This settings enables time uncertainty propagation
 # logic incase of missing PPS pulse
 PROPAGATION_TIME_UNCERTAINTY = 1
+XTRA_TEST_ENABLED = 1
+XTRA_THROTTLE_ENABLED = 0
+
+####################################
+# system time injection
+####################################
+XTRA_SYSTEM_TIME_INJECT = 1
