--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -118,7 +118,7 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=BASIC
+SAP=PREMIUM
 
 #ODCPI valid modes:
 #DISABLED
@@ -191,7 +191,7 @@ HARDWARE_TYPE=automotive
 #DISABLED -> if this process is to be disabled on lean and mean targets
 PROCESS_NAME=garden_app
 PROCESS_ARGUMENT=-l 0 -T 1
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=gps diag
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
@@ -246,7 +246,7 @@ HARDWARE_TYPE=all
 
 PROCESS_NAME=slim_daemon
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=gps oem_2950 can
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
@@ -274,3 +274,7 @@ HARDWARE_TYPE=all
 # XTRA client.
 ##################################################
 # XC20_LAUNCH_PROCESS_NAME=garden_app
+
+#Accuracy threshold for ZPP positions
+# less accurate positions are ignored
+ZPP_ACCURACY_THRESHOLD=1000
