--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -1,8 +1,21 @@
 #Uncommenting these urls would only enable
 #the power up auto injection and force injection(test case).
-XTRA_SERVER_1=https://xtrapath1.izatcloud.net/xtra3grc.bin
-XTRA_SERVER_2=https://xtrapath2.izatcloud.net/xtra3grc.bin
-XTRA_SERVER_3=https://xtrapath3.izatcloud.net/xtra3grc.bin
+#XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
+#XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
+#XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
+
+#ifdef VENDOR_EDIT
+# zuoyonghua@oneplus.cn add gps xtra server for speed up gps cold start
+#XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra3grc.bin
+#XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra3grc.bin
+#XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra3grc.bin
+#endif
+
+#ifdef VENDOR_EDIT
+# songhao@oneplus.cn,XTRA download config for debug
+XTRA_TEST_ENABLED = 1
+XTRA_THROTTLE_ENABLED = 0
+#endif
 
 #Version check for XTRA
 #DISABLE = 0
@@ -18,8 +31,6 @@ ERR_ESTIMATE=0
 
 #NTP server
 NTP_SERVER=time.izatcloud.net
-NTP_SERVER_2=asia.pool.ntp.org
-NTP_SERVER_3=0.cn.pool.ntp.org
 
 #XTRA CA path
 XTRA_CA_PATH=/system/etc/security/cacerts
@@ -27,10 +38,10 @@ XTRA_CA_PATH=/system/etc/security/cacerts
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 2
+DEBUG_LEVEL = 3
 
 # Intermediate position report, 1=enable, 0=disable
-INTERMEDIATE_POS=1
+INTERMEDIATE_POS=0
 
 # Below bit mask configures how GPS functionalities
 # should be locked when user turns off GPS on Settings
@@ -43,19 +54,19 @@ INTERMEDIATE_POS=1
 SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
-SUPL_ES=0
+#SUPL_ES=0
 
 #Choose PDN for Emergency SUPL
 #1 - Use emergency PDN
 #0 - Use regular SUPL PDN for Emergency SUPL
-USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=1
+#USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=0
 
 #SUPL_MODE is a bit mask set in config.xml per carrier by default.
 #If it is uncommented here, this value will overwrite the value from
 #config.xml.
 #MSA=0X2
 #MSB=0X1
-SUPL_MODE=3
+#SUPL_MODE=
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
@@ -68,15 +79,15 @@ CAPABILITIES=0x37
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-ACCURACY_THRES=70
+ACCURACY_THRES=100
 
 ################################
 ##### AGPS server settings #####
 ################################
 
 # FOR SUPL SUPPORT, set the following
-SUPL_HOST=supl.google.com
-SUPL_PORT=7275
+# SUPL_HOST=supl.host.com or IP
+# SUPL_PORT=1234
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
@@ -97,7 +108,7 @@ SUPL_PORT=7275
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 0
+LPP_PROFILE = 2
 
 ################################
 # EXTRA SETTINGS
@@ -113,7 +124,11 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0
+#ifndef zuoyonghua@oneplus.cn enable all bit mask for GLONASS
+#A_GLONASS_POS_PROTOCOL_SELECT = 0
+#else
+A_GLONASS_POS_PROTOCOL_SELECT = 15
+#endif
 
 ##################################################
 # Select technology for LPPe Control Plane
@@ -155,7 +170,6 @@ AGPS_CONFIG_INJECT = 1
 # please do not change, keep the default values
 ##################################################
 
-##################################################
 # AP Coarse Timestamp Uncertainty
 ##################################################
 # default : 10
@@ -208,10 +222,3 @@ MISSING_PULSE_TIME_DELTA = 900
 # This settings enables time uncertainty propagation
 # logic incase of missing PPS pulse
 PROPAGATION_TIME_UNCERTAINTY = 1
-XTRA_TEST_ENABLED = 1
-XTRA_THROTTLE_ENABLED = 0
-
-####################################
-# system time injection
-####################################
-XTRA_SYSTEM_TIME_INJECT = 1
